Improves and fixes CSS of the box, title and subtitle

--- a/css/components/title.css
+++ b/css/components/title.css
@@ -1,10 +1,7 @@
-#title-banner {
+h2 {
     font-family: "Press Start 2P", sans-serif;
     font-size: 40px;
     color: #31763B;
-    text-shadow: 5px 5px 0px #000;
+    text-shadow: 4px 4px 0px #000;
     font-weight: 400;
-    position: absolute;
-    top: 54px;
-    left: 58px;
 }
