--- a/css/components/subtitle.css
+++ b/css/components/subtitle.css
@@ -1,11 +1,8 @@
-#subtitle-banner {
+h3 {
     font-family: "Press Start 2P", sans-serif;
     font-size: 28px;
     color: #FFF;    
     text-shadow: 4px 4px 0px #000;
     font-weight: 400;
     letter-spacing: -0.1em;
-    position: absolute;
-    top: 100px;
-    left: 90px;
 }
