modify the visual

--- a/css/components/box.css
+++ b/css/components/box.css
@@ -1,7 +1,7 @@
 .box {
     display:inline-block;
-    background-color: #3A4042;
-    box-shadow: 10px 10px 0px #000;
+    background-color: #283655;
+    box-shadow: 10px 10px 0px #1E1F26;
     text-align: center;
     padding: 50px 90px;
 }
