--- a/css/components/subtitle.css
+++ b/css/components/subtitle.css
@@ -2,7 +2,7 @@
     font-family: "Press Start 2P", sans-serif;
     font-size: 28px;
     color: #FFF;    
-    text-shadow: 4px 4px 0px #000;
+    text-shadow: 4px 4px 0px #4D648D;
     font-weight: 400;
     letter-spacing: -0.1em;
 }
