--- a/css/components/action.css
+++ b/css/components/action.css
@@ -10,7 +10,7 @@
 
 .action::before {
     content: "";
-    background-color: #31763B;
+    background-color: #4D648D;
     width: 10px;
     height: 10px;
     margin-right: 10px;
