--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -4,8 +4,7 @@
     background-repeat: no-repeat;
     background-size: 100%;
     height: 810px;
-    border-bottom: 10px solid #000;
-    
+    border-bottom: 10px solid #4D648D;
 }
 
 .banner .wrapper {
