--- a/css/components/header.css
+++ b/css/components/header.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #4C5B84;
+    background-color: #283655;
     border-bottom: 10px solid #000;
     padding: 10px 20px;
 }
