--- a/css/components/logo.css
+++ b/css/components/logo.css
@@ -1,7 +1,7 @@
 .logo {
     font-family: "Press Start 2P", Arial, Helvetica, sans-serif;
     color: #FFF;
-    text-shadow: 5px 5px 0px #000;
+    text-shadow: 4px 4px 0px #4D648D;
     font-size: 24px;
     font-weight: 400;
 }
