--- a/css/components/title.css
+++ b/css/components/title.css
@@ -1,7 +1,7 @@
 .title {
     font-family: "Press Start 2P", sans-serif;
     font-size: 40px;
-    color: #31763B;
-    text-shadow: 4px 4px 0px #000;
+    color: #FFF;
+    text-shadow: 5px 5px 0px #4D648D;
     font-weight: 400;
 }
