--- a/css/components/section.css
+++ b/css/components/section.css
@@ -10,3 +10,8 @@
     text-align: center;
     margin-bottom: 60px;
 }
+
+.section.-projects {
+    background-color: #283655;
+    border-bottom: 10px solid #4D648D;
+}
