--- a/css/components/main-logo.css
+++ b/css/components/main-logo.css
@@ -1,4 +1,4 @@
-.logo {
+.main-logo {
     font-family: "Press Start 2P", Arial, Helvetica, sans-serif;
     color: #FFF;
     text-shadow: 4px 4px 0px #4D648D;
