--- a/css/components/main-banner.css
+++ b/css/components/main-banner.css
@@ -1,4 +1,4 @@
-.banner {
+.main-banner {
     box-sizing: border-box;
     background-image: url(../../assets/img/photo.jpg);
     background-repeat: no-repeat;
@@ -7,7 +7,7 @@
     border-bottom: 10px solid #4D648D;
 }
 
-.banner .wrapper {
+.main-banner .wrapper {
     display: flex;
     flex-direction: column;
     width: 640px;
@@ -18,11 +18,11 @@
     transform: translate(-50%);
 }
 
-.banner .box {
+.main-banner .box {
     margin-bottom: 60px;
 }
 
-.banner .navigation {
+.main-banner .navigation {
     display: flex;
     justify-content: space-around;
 }
