--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -1,17 +1,17 @@
-.section {
+.main-section {
     background-color: #1E1F26;
     padding-top: 50px;
     padding-bottom: 100px;
     border-bottom: 10px solid #000;
 }
 
-.section .main-title.-second {
+.main-section .main-title.-second {
     color: #FFF;
     text-align: center;
     margin-bottom: 60px;
 }
 
-.section.-projects {
+.main-section.-projects {
     background-color: #283655;
     border-bottom: 10px solid #4D648D;
 }
